# Tasks-from-CXZ

task1/: CMakeLists.txt  pointer.cpp
task2/: CMakeLists.txt  sort-1.cpp  sort.cpp
task2/include/: ThreeDimensionalArraySort.h
task2/src/: ThreeDimensionalArraySort.cpp  sort-1.cpp
task3/: CMakeLists.txt
task3/include/: array.h  quicksort.h  sort.h
task3/src/: CMakeLists.txt  main.cpp
task3/temp/: CMakeLists.txt  array.cpp  quicksort.cpp  sort.cpp
